# ComfyUI-Animagine-Prompt

./: .gitignore  README.md  __init__.py  animagine_node.py  api_routes.py  csv_handler.py  logger.py  pyproject.toml  requirements.txt  state_manager.py  wildcards_node.py
example_csv/: create_your_own.txt  example.csv
example_files/: clothing.txt  example.csv  example_wildcards.txt  expressions.txt  poses.txt  scenarios.txt
example_workflow/: example_wildcards_workflow.json  example_workflow.json
web/: animagine_reload.js
